// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`09snapshotTest No.001 测试创建快照(静态页面) 1`] = `
<div>
  <header>
    09.快照测试 [静态组件]
  </header>
   
  <p>
    获取代码的快照，并将其与以前保存的快照进行对比 (jest是通过对比序列化值)
  </p>
   
  <transition-stub>
    <svg
      class="spinner"
      height="50px"
      viewBox="0 0 50 50"
      width="50px"
    >
      <circle
        class="path"
        cx="22"
        cy="22"
        fill="none"
        r="20"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
  </transition-stub>
</div>
`;

exports[`09snapshotTest No.002 测试创建快照(动态页面)(props使用类型A) 1`] = `
<div>
  <header>
    09.快照测试 [动态组件]
  </header>
   
  <div>
    AAAAA组件
  </div>
   
  <!---->
</div>
`;

exports[`09snapshotTest No.003 测试创建快照(动态页面)(props使用类型B) 1`] = `
<div>
  <header>
    09.快照测试 [动态组件]
  </header>
   
  <!---->
   
  <div>
    BBBBB组件
  </div>
</div>
`;
